<resources>
    <!-- Strings used for fragments of Signing up(Sunny added these) -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Firebase directory paths?-->
    <string name="users_path">Users</string>
    <string name="products_path">Products</string>
    <string name="orders_path">Orders</string>
    <string name="stores_path">Stores</string>
    <string name="test_path">Test</string>
    <string name="store_id_child">storeID</string>
    <string name="store_name_child">storeName</string>
    <string name="product_list">productList</string>
    <string name="order_list">ordersList</string>

    <!-- Labels & stuff-->
    <string name="app_name">CSCB_Project</string>
    <string name="textview_Bmazon">Bmazon</string>
    <string name="label_owner">Store Owner</string>
    <string name="label_customer">Customer</string>
    <string name="label_login">Login</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_account_type">Account Type:</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="label_signout">Sign Out &amp; Exit</string>
    <string name="label_home">Home</string>
    <string name="label_storeList">All Stores</string>
    <string name="label_orderList">My Orders</string>
    <string name="label_manageStore">My Store</string>

    <string name="label_item">Item</string>
    <string name="label_name">Item Name</string>
    <string name="label_price">Price</string>
    <string name="label_brand">Brand</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_shop">Shop</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_products">Products</string>
    <string name="label_createProduct">Create a New Product</string>
    <string name="button_store">Manage My Store</string>
    <string name="button_products">View Your Products</string>
    <string name="button_orders">My Orders</string>
    <string name="label_ownerOrders">My Orders</string>
    <string name="button_shop">Browse Stores</string>
    <string name="button_store_orders">Pending Orders</string>
    <string name="label_cart">My Cart</string>
    <string name="button_addProduct">Add Product</string>
    <string name="button_editStore">Edit Store Name</string>
    <string name="welcome_message">Welcome</string>
    <string name="label_newName">New Name</string>
    <string name="label_oldName">Old Name</string>
    <string name="label_editStore">Edit Store Name</string>
    <string name="label_ownerProducts">My Products</string>
    <string name="label_submit">Place Order</string>



    <!-- Haven't really gotten to these yet-->
    <string name="label_complete">Complete</string>


    <string name="textview_total_price">Total price</string>
    <string name="button_AddToCart">Add to Cart</string>
    <string name="store">Store</string>

    <string name="your_order_sent_successfully">Your Order Sent Successfully</string>
    <string name="your_order_add_to_cart_successfully">Your Order Added To Cart Successfully</string>

    <string name="no_products_available">No products available, please add products in </string>
    <string name="statusString">Status:</string>
</resources>